# Epos2-Motor-Controller

./: .gitignore  CMakeLists.txt  Makefile  README.md  epos_example.cpp  output.txt
MotorController/: CMakeLists.txt
MotorController/include/: MotorController.h
MotorController/src/: MotorController.cpp
apps/: CMakeLists.txt  solver_test.cpp
cpp/: CMakeLists.txt  epos_example.cpp  function_q_for_length.cpp
cpp/MotorController/include/: MotorController.h
cpp/MotorController/src/: MotorController.cpp
cpp/TrajectoryGenerator/: CMakeLists.txt
cpp/TrajectoryGenerator/src/: TrajectoryGenerator.cpp
include/: solver.h
python/: MotorController.py  epos_example.py  test_trajectoryGenerator.py  trajectoryGenerator.py
src/: CMakeLists.txt  solver.cpp
